--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
 	</head>
 <body>
 <h1><u>5 LINKS HTML</u></h1>
-<a href="file:///C:/Users/L%20E%20N%20O%20V%20O/Desktop/IMD311/Personal-Porfolio/homepage.html"><button>HOMEPAGE</button><br><a href="file:///C:/Users/L%20E%20N%20O%20V%20O/Desktop/IMD311/Personal-Porfolio/biodata.html"><button>BIODATA</button><br><a href="file:///C:/Users/L%20E%20N%20O%20V%20O/Desktop/IMD311/Personal-Porfolio/portfolio.html"><button>PORTFOLIO</button><br><a href="file:///C:/Users/L%20E%20N%20O%20V%20O/Desktop/IMD311/Personal-Porfolio/experience.html"><button>EXPERIENCE</button><br><a href="file:///C:/Users/L%20E%20N%20O%20V%20O/Desktop/IMD311/Personal-Porfolio/contact.html"><button>CONTACT</button>
+<a href="homepage.html"><button>HOMEPAGE</button><br><a href="biodata.html"><button>BIODATA</button><br><a href="portfolio.html"><button>PORTFOLIO</button><br><a href="experience.html"><button>EXPERIENCE</button><br><a href="contact.html"><button>CONTACT</button>
 
 
 </body>
