--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1><u>THIS IS MY PORTFOLIO</u></h1>
-<img src="capture.png" width="600px" height="700px">
+<img src="cv.png" width="600px" height="700px">
 
 
 </body>
